<resources>
    <string name="app_name">PhrasalFR</string>
    <string name="title_home">Home</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_phrases">Phrases</string>
    <string name="quiz_settings_sharedPrefs">Quiz Settings SharedPreferences</string>

    <string name="home_header_phrase">Bonjour! \n Ready to practice French?</string>
    <string name="edit_db_header_phrase">Here are all your Phrases! </string>

    <!-- Keys for Quiz Settings HashMap -->
    <string name="verb_tense_key">Verb Tense</string>
    <string name="phrase_category_key">Category</string>
    <string name="question_format_key">Question Format</string>
    <string name="answer_format_key">Answer Format</string>

    <!-- Values for Quiz Settings HashMap -->
    <string name="verb_value_present">Le présent</string>
    <string name="verb_value_passe_compose">passé composé</string>
    <string name="verb_value_future_proche">futur porche</string>

    <string name="question_format_value_english_text">English Text</string>
    <string name="question_format_value_french_text">French Text</string>
    <string name="question_format_value_french_audio">French Audio</string>

    <string name="answer_format_value_english_text">English Text</string>
    <string name="answer_format_value_french_text">French Text</string>
    <string name="answer_format_value_french_audio">French Audio</string>

    <!-- UI Strings -->
    <string name="select_question_format">Select Question Format</string>
    <string name="select_answer_format">Select Answer Format</string>
    <string name="start_quiz">Start Quiz!</string>
    <string name="submit_answer">Submit!</string>

    <!-- Categories -->
    <string name="all_phrases_category">All Phrases</string>
    <string name="phrases_category">Phrases</string>
    <string name="vocabulary_category">Vocabulary</string>
    <string name="grammar_category">Grammar</string>
    <string name="greetings_category">Greeting</string>
    <string name="user_phrases_category">User Phrase</string>
    <string name="work_category">Work</string>

    <!-- Phrases Fragment Strings -->
    <string name="phrases_french_title">French</string>
    <string name="phrases_english_title">English</string>
    <string name="translate_title">Translate</string>

</resources>