<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_home_parentLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/settings_verb_tense_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:id="@+id/settings_verb_tense_constrainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Verb Tense"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/settings_verb_tense_checkboxes_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/settings_le_présent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="Le présent"

                />

            <com.google.android.material.chip.Chip
                android:id="@+id/settings_passé_composé"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="passé composé" />

            <com.google.android.material.chip.Chip
                android:id="@+id/settings_futur_proche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="futur proche" />
        </com.google.android.material.chip.ChipGroup>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/settings_categories_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/settings_verb_tense_cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="16dp"
        android:layout_margin="8dp"
        >

        <LinearLayout
            android:id="@+id/settings_categories_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Phrase Category"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/settings_verbs_chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/settings_grammar_Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"

                    android:text="@string/grammar_category"

                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/settings_greetings_Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"

                    android:text="@string/greetings_category"

                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/settings_user_phrases_Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"

                    android:text="@string/user_phrases_category"

                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/settings_all_phrases_Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"

                    android:text="@string/all_phrases_category"

                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    />
                    <!--
                   <com.google.android.material.chip.Chip
                       android:id="@+id/settings_verbs_top20_Chip"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       style="@style/Widget.MaterialComponents.Chip.Choice"

                       android:text="Sports"

                       android:layout_marginStart="20dp"
                       android:layout_marginTop="8dp"
                        />

                   <com.google.android.material.chip.Chip
                       android:id="@+id/settings_cookingVerbList_Chip"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       style="@style/Widget.MaterialComponents.Chip.Choice"

                       android:text="Music"

                       android:layout_marginStart="20dp"
                       android:layout_marginTop="8dp"
                        />

                       <com.google.android.material.chip.Chip
                           android:id="@+id/settings_workVerbList_Chip"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           style="@style/Widget.MaterialComponents.Chip.Choice"

                           android:text="News"

                           android:layout_marginStart="20dp"
                           android:layout_marginTop="8dp"
                           />


                       <com.google.android.material.chip.Chip
                           android:id="@+id/settings_addList_Chip"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           style="@style/Widget.MaterialComponents.Chip.Choice"

                           android:text="+"

                           android:layout_marginStart="20dp"
                           android:layout_marginTop="8dp"
                           />
                           -->
                </com.google.android.material.chip.ChipGroup>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/settings_question_options_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/settings_categories_cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="16dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_question_format"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/settings_question_english_text_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_format_value_english_text" />
                <RadioButton
                    android:id="@+id/settings_question_french_text_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_format_value_french_text"/>
                <RadioButton
                    android:id="@+id/settings_question_french_audio_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_format_value_french_audio"/>
            </RadioGroup>
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/settings_answer_options_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/settings_question_options_cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="16dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_answer_format"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/settings_answer_english_text_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_format_value_english_text"/>
                <RadioButton
                    android:id="@+id/settings_answer_french_text_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_format_value_french_text"/>
                <RadioButton
                    android:id="@+id/settings_answer_french_audio_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_format_value_french_audio"/>
            </RadioGroup>
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


 <!--
    <Button
        android:id="@+id/setting_save_quiz_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Quiz Settings"

        android:layout_marginBottom="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
        -->




</androidx.constraintlayout.widget.ConstraintLayout>